--- a/wp-content/themes/skalTheme/style.css
+++ b/wp-content/themes/skalTheme/style.css
@@ -11,3 +11,15 @@ Text Domain: skal-theme
 @theme {
   --font-roboto: 'Roboto', sans-serif;
 } 
+
+/* Quitar flechas en Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Quitar flechas en Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
