Se ajusta el header para que muestre las secciones correctas

--- a/wp-content/themes/skalTheme/assets/css/tailwind.css
+++ b/wp-content/themes/skalTheme/assets/css/tailwind.css
@@ -507,6 +507,9 @@
   .w-96 {
     width: calc(var(--spacing) * 96);
   }
+  .w-100 {
+    width: calc(var(--spacing) * 100);
+  }
   .w-\[90\%\] {
     width: 90%;
   }
